# lion_brain

./: .gitignore  CMakeLists.txt  README.md  package.xml
inc/: lion_brain.h  lion_brain_node.h
inc/core/: lion_control.h  lion_protocol.h  lion_serial.h  lion_serial_impl.h  lion_thread.h  lion_type.h
launch/: lion_brain.launch
msg/: rc.msg
src/: lion_brain.cpp  lion_brain_node.cpp  lion_brain_publisher.cpp  lion_brain_subscriber.cpp  main.cpp
src/core/: lion_control.cpp  lion_protocol.cpp  lion_serial.cpp  lion_serial_impl.cpp  lion_thread.cpp
support/: ch340.rules
