<?xml version="1.0"?>
<package format="2">

  <name>lion_brain</name>
  <version>0.0.0</version>
  <description>The lion_bot package</description>

  <maintainer email="kongy6@mail2.sysu.edu.cn">Joen</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

</package>
